fixed paragraph alignment about page

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -520,6 +520,10 @@ section {
     transition: .5s ease;
   }
 
+  p {
+    margin: 0 -30px 10px;
+  }
+
   img {
     width: 100%;
     border-radius: 50%;
